--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,31 +1,92 @@
+:root {
+    --main-bg-color: #4e7e68;
+    --footer-bg-color: rgb(50, 99, 82);
+    --btn-margin-top: 2%;
+    --padding-default: 20%;
+    --padding-form: 25%;
+}
+
+body {
+    font-family: 'Roboto', sans-serif;
+}
+
+h1, h2, h3, h4, h5, h6 {
+    font-family: 'Oswald', sans-serif;
+}
+
+#hero, #curriculum, #formtxt, #footer {
+    background-color: var(--main-bg-color);
+    padding-left: var(--padding-default);
+    padding-right: var(--padding-default);
+}
+
 #hero {
-    background-color: #4e7e68;
-    padding-left:20%;
-    padding-right:20%;
+    padding-left: 20%;
+    padding-right: 20%;
 }
-.lead{
-    font-family:sans-serif;
-    font-size: medium;
-}
+
 #curriculum {
-    background-color: #4e7e68;
-    padding-left:20%;
-    padding-right:20%;
+    padding-bottom: 5%;
 }
+
+#laboral{
+    padding-bottom: 2%;
+}
+
+#formtxt {
+    padding-left: var(--padding-form);
+    padding-right: var(--padding-form);
+}
+
 #form {
-    background-color: #4e7e68;
-    padding-top: 3%;
-    padding-bottom: 3%;
-    padding-left:20%;
-    padding-right:20%;
+    background-color: var(--main-bg-color);
+    padding-bottom: 5%;
+    padding-right: 10%;
 }
-.btn-outline-light{
-    margin-top: 2%;
+
+.btn-outline-light {
+    margin-top: var(--btn-margin-top);
 }
 
 #footer {
-    background-color: rgb(50, 99, 82);
-    padding-left:20%;
-    padding-right:20%;
+    background-color: var(--footer-bg-color);
+    padding-left: var(--padding-default);
+    padding-right: var(--padding-default);
 }
 
+section {
+    margin-bottom: 0; 
+}
+
+/* Media Queries */
+
+/* Pantallas pequeñas (móviles) */
+@media (max-width: 767px) {
+    #hero, #curriculum, #formtxt, #footer {
+        padding-left: 5%;
+        padding-right: 5%;
+    }
+
+    #hero img {
+        width: 100%;
+        height: auto;
+    }
+
+    #formtxt, #footer {
+        padding-left: 5%;
+        padding-right: 5%;
+    }
+
+    #form {
+        padding-right: 5%;
+    }
+
+    .container-fluid {
+        padding-left: 0;
+        padding-right: 0;
+    }
+
+    .btn-outline-light {
+        width: 100%;
+    }
+}
